# EduMotion

./: animatable.py  common.py  main.py  pyproject.toml  reactsignal.py  signal.py  test_signals.py  tween.py
sig/: animatable.py  logger_config.py  reactsignal.py  tween.py
stubs/glfw/: __init__.pyi  library.pyi
stubs/skia/: __init__.pyi  cms.pyi
