[project]
name = "edumotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "debugpy>=1.8.13",
    "glfw>=2.8.0",
    "log-symbols>=0.0.14",
    "numpy>=2.2.4",
    "pybind11-stubgen>=2.5.3",
    "pyopengl>=3.1.9",
    "pyqt6>=6.8.1",
    "pyside6>=6.8.2.1",
    "pytest-benchmark>=5.1.0",
    "skia-python>=87.7",
    "vprof>=0.38",
]

[tool.pyright]
include = ["sig"]
exclude = ["**/node_modules", "**/__pycache__", "stubs"]
pythonVersion = "3.12"
reportMissingTypeStubs = false
allowUntypedLibraries = ["skia"]
reportExplicitAny = false
reportUnknownMemberType = false
reportAny = false
reportUnknownVariableType = false
stubPath = "./stubs"
